--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,46 @@
+*
+{
+    padding: 0;
+    margin: 0;
+}
+
 body
 {
-    background-color:blueviolet;
+    background-color:white;
 }
+
+header
+{
+    text-align: center; 
+}
+
+header H1
+{
+    background-color: black;
+    color:white;
+    padding:1em;
+}
+
+nav ul
+{
+    display:flex;
+    flex-direction: row;
+    list-style:none;
+    justify-content:space-evenly;
+    margin:1em;
+}
+
+#result
+{
+    display:flex;
+    justify-content:center;
+    align-items:center; 
+    
+}
+#result p
+{
+    margin:1em;
+    font-size:200px;
+}
+
+
